// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IllustCardSmall 1`] = `
<div
  class="IllustCardSmall__Root-sc-pze6hn-0 jOkAqI"
>
  <div
    class="IllustCardSmall__ImageWrapper-sc-pze6hn-1 cYrpPj"
  >
    <div
      style="display:inline-block;max-width:100%;overflow:hidden;position:relative;box-sizing:border-box;margin:0"
    >
      <div
        style="box-sizing:border-box;display:block;max-width:100%"
      >
        <img
          alt=""
          aria-hidden="true"
          role="presentation"
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
          style="max-width:100%;display:block;margin:0;border:none;padding:0"
        />
      </div>
      <noscript>
        &lt;img srcSet="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=128&amp;q=75 1x, /_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75 2x" src="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75" decoding="async" style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain"/&gt;
      </noscript>
      <img
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain"
      />
    </div>
  </div>
  <div
    class="IllustCardSmall__TextWrapper-sc-pze6hn-2 hZRBmh"
  >
    sampletext
  </div>
</div>
`;

exports[`IllustCardSmall 2`] = `
<div
  class="IllustCardSmall__Root-sc-pze6hn-0 bVmiEj"
>
  <div
    class="IllustCardSmall__ImageWrapper-sc-pze6hn-1 cYrpPj"
  >
    <div
      style="display:inline-block;max-width:100%;overflow:hidden;position:relative;box-sizing:border-box;margin:0"
    >
      <div
        style="box-sizing:border-box;display:block;max-width:100%"
      >
        <img
          alt=""
          aria-hidden="true"
          role="presentation"
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
          style="max-width:100%;display:block;margin:0;border:none;padding:0"
        />
      </div>
      <noscript>
        &lt;img srcSet="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=128&amp;q=75 1x, /_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75 2x" src="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75" decoding="async" style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain"/&gt;
      </noscript>
      <img
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain"
      />
    </div>
  </div>
  <div
    class="IllustCardSmall__TextWrapper-sc-pze6hn-2 hZRBmh"
  >
    sampletext
  </div>
</div>
`;
